--- a/catalog.html
+++ b/catalog.html
@@ -70,7 +70,6 @@
             <section class="new_arrivals center">
                 <h1 class="new_arrivals__title">NEW ARRIVALS</h1>
                 <div class="new_arrivals__bread_crumbs">
-
                     <a class="new_arrivals__link" href="#">HOME</a>
                     <a class="new_arrivals__link" href="#">MEN</a>
                     <a class="new_arrivals__link" href="#">NEW ARRIVALS</a>
@@ -79,7 +78,25 @@
         </section>
         <section class="catalog_main_content">
             <section class="catalog_offer center">
-                <img src="img/main_image.jpg" alt="main_image">
+                <svg class="catalog_offer__slider catalog_offer__slider_sl1" width="47" height="47" viewBox="0 0 47 47"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+                    <path
+                        d="M29.6998 15.7499L21.9498 23.4999L29.6998 31.2499L28.1498 34.3499L17.2998 23.4999L28.1498 12.6499L29.6998 15.7499Z"
+                        fill="black" />
+                </svg>
+
+                <img class="catalog_offer__image catalog_offer__image_img1" src="img/catalog_main_image.jpg"
+                    alt="main_image">
+
+                <svg class="catalog_offer__slider catalog_offer__slider_sl2" width="47" height="47" viewBox="0 0 47 47"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M47 0H0V47H47V0Z" fill="#2A2A2A" fill-opacity="0.15" />
+                    <path
+                        d="M17.2998 31.2499L25.0498 23.4999L17.2998 15.7499L18.8498 12.6499L29.6998 23.4999L18.8498 34.3499L17.2998 31.2499Z"
+                        fill="black" />
+                </svg>
+
             </section>
             <div class="catalog_main_content__description_width">
                 <div class="catalog_main_content__description_part">
@@ -147,7 +164,7 @@
                 </div>
             </div>
             <section class="content_items center for_catalog">
-                <figure class="content_item4 content_bgc">
+                <figure class="content_items__item content_items__item_order1 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img4.jpg" alt="photo1">
@@ -166,7 +183,7 @@
                         <h4 class="item_text__price">$52.00</h4>
                     </article>
                 </figure>
-                <figure class="content_item3 content_bgc">
+                <figure class="content_items__item content_items__item_order2 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img3.jpg" alt="photo1">
@@ -185,7 +202,7 @@
                         <h4 class="item_text__price">$52.00</h4>
                     </article>
                 </figure>
-                <figure class="content_item6 content_bgc">
+                <figure class="content_items__item content_items__item_order3 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img6.jpg" alt="photo1">
