--- a/product_presentation.html
+++ b/product_presentation.html
@@ -170,7 +170,7 @@
                         <div class="offer_details__choose_box specl">
                             <span>1</span>
                             <input class="offer_details__slider" type="range" min="1" max="1000" value="0" step="1"
-                                required>
+                                orient="vertical" required>
                             <span>1000</span>
                         </div>
                     </details>
@@ -178,7 +178,7 @@
             </section>
 
             <section class="content_items center">
-                <figure class="content_item1 content_bgc">
+                <figure class="content_items__item content_items__item_order1 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img1.jpg" alt="photo1">
@@ -199,7 +199,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item2 content_bgc">
+                <figure class="content_items__item content_items__item_order2 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img7.jpg" alt="photo2">
@@ -220,7 +220,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item3 content_bgc">
+                <figure class="content_items__item content_items__item_order3 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img3.jpg" alt="photo1">
@@ -241,7 +241,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item4 content_bgc">
+                <figure class="content_items__item content_items__item_order4 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img4.jpg" alt="photo1">
@@ -262,7 +262,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item5 content_bgc">
+                <figure class="content_items__item content_items__item_order5 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img8.jpg" alt="photo1">
@@ -283,7 +283,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item6 content_bgc">
+                <figure class="content_items__item content_items__item_order6 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img9.jpg" alt="photo1">
@@ -304,7 +304,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item7 content_bgc">
+                <figure class="content_items__item content_items__item_order7 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img10.jpg" alt="photo1">
@@ -325,7 +325,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item8 content_bgc">
+                <figure class="content_items__item content_items__item_order8 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img11.jpg" alt="photo1">
@@ -346,7 +346,7 @@
                         </article>
                     </a>
                 </figure>
-                <figure class="content_item9 content_bgc">
+                <figure class="content_items__item content_items__item_order9 content_bgc">
                     <div class="pseudo">
                         <div class="item_image">
                             <img src="img/content_img12.jpg" alt="photo1">
