--- a/registration.html
+++ b/registration.html
@@ -87,6 +87,8 @@
                         <label for="sex1">Male</label>
                         <input class="registration__radio" type="radio" id="sex2" name="choise" required>
                         <label for="sex2">Female</label>
+                        <input class="registration__radio" type="radio" id="sex3" name="choise" required>
+                        <label for="sex3">Other</label>
                     </div>
 
                     <h4 class="registration__title">Login details</h4>
@@ -108,7 +110,8 @@
                 </form>
                 <section class="right_side right_side_padding">
                     <h2 class="right_side__title">LOYALTY HAS ITS PERKS</h2>
-                    <h2 class="right_side__title">Get in on the loyalty program where you can earn points and unlock
+                    <h2 class="right_side__title right_side__title_special">Get in on the loyalty program where you can
+                        earn points and unlock
                         serious perks. Starting with these as soon as you join:</h2>
                     <ul class="right_side__list">
                         <li class="right_side__list_li">15% off welcome offer</li>
