--- a/basket.html
+++ b/basket.html
@@ -82,7 +82,9 @@
                             <img src="img/basket_item1.jpg" alt="basket_item1">
                             <div class="basket_item__description">
                                 <div class="basket_item__description__top_part">
-                                    <figcaption>MANGO PEOPLE T-SHIRT</figcaption>
+                                    <figcaption>
+                                        <h1>MANGO PEOPLE <br> T-SHIRT</h1>
+                                    </figcaption>
                                     <svg class="basket_item__cross" xmlns="http://www.w3.org/2000/svg" width="18"
                                         height="18" viewBox="0 0 18 18" fill="none">
                                         <path
@@ -105,7 +107,9 @@
                             <img src="img/basket_item2.jpg" alt="basket_item1">
                             <div class="basket_item__description">
                                 <div class="basket_item__description__top_part">
-                                    <figcaption>MANGO PEOPLE T-SHIRT</figcaption>
+                                    <figcaption>
+                                        <h1>MANGO PEOPLE <br> T-SHIRT</h1>
+                                    </figcaption>
                                     <svg class="basket_item__cross" xmlns="http://www.w3.org/2000/svg" width="18"
                                         height="18" viewBox="0 0 18 18" fill="none">
                                         <path
